--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,13 +1,14 @@
 version: 0.2
-
 phases:
   build:
     commands:
-      - echo Entered the build phase...
-      - mvn clean package
+     - echo Entered build 
+     - mvn clean package
+
   post_build:
     commands:
-      - echo Build completed successfully
+     - echo Build completed
+
 artifacts:
   files:
     - target/order-service.jar
